--- a/NeuralNetStudioExcelWeb/NeuralNetStudioExcelWeb.csproj
+++ b/NeuralNetStudioExcelWeb/NeuralNetStudioExcelWeb.csproj
@@ -77,10 +77,10 @@
     <Content Include="Content\fabric.min.css" />
     <Content Include="Content\MessageBanner.css" />
     <Content Include="Functions\FunctionFile.html" />
-    <Content Include="Functions\FunctionFile.js" />
+    <TypeScriptCompile Include="Functions\FunctionFile.ts" />
     <Content Include="Home.css" />
     <Content Include="Home.html" />
-    <Content Include="Home.js" />
+    <TypeScriptCompile Include="Home.ts" />
     <Content Include="Images\AddinIcon.png" />
     <Content Include="Images\Button16x16.png" />
     <Content Include="Images\Button32x32.png" />
@@ -130,7 +130,7 @@
     <Content Include="Content\OfficeThemes.css" />
     <Content Include="Scripts\embedded\1.0\visio-web-embedded.debug.js" />
     <Content Include="Scripts\embedded\1.0\visio-web-embedded.js" />
-    <Content Include="Scripts\MessageBanner.js" />
+    <TypeScriptCompile Include="Scripts\MessageBanner.ts" />
     <Content Include="Scripts\Office\1\access-web-16.00.debug.js" />
     <Content Include="Scripts\Office\1\access-web-16.00.js" />
     <Content Include="Scripts\Office\1\am-et\office_strings.debug.js" />
@@ -563,6 +563,7 @@
     <Content Include="Scripts\Office\metadata\features.xml" />
     <Content Include="Scripts\Office\MicrosoftAjax.js" />
     <Content Include="Web.config" />
+    <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
