init add-in project

--- a/NeuralNetStudioExcel/NeuralNetStudioExcel.csproj
+++ b/NeuralNetStudioExcel/NeuralNetStudioExcel.csproj
@@ -21,6 +21,7 @@
     <ProjectMode>OfficeApp</ProjectMode>
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <MinimumOfficeToolsVersion>14.0</MinimumOfficeToolsVersion>
+    <CoreWebProject>..\NeuralNetStudioExcelAddin\NeuralNetStudioExcelAddin.csproj</CoreWebProject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -49,17 +50,6 @@
       <OpcRelationship>manifest-oemanifest</OpcRelationship>
     </Content>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\NeuralNetStudioExcelWeb\NeuralNetStudioExcelWeb.csproj">
-      <Project>{166B4601-6E18-4345-B642-71F73A994F27}</Project>
-      <Name>NeuralNetStudioExcelWeb</Name>
-      <Private>True</Private>
-      <RoleType>Web</RoleType>
-      <OutputItemType>SharePointWebProjectOutput</OutputItemType>
-      <RoleName>NeuralNetStudioExcelWeb</RoleName>
-      <ReferenceOutputAssembly>False</ReferenceOutputAssembly>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
