--- a/NeuralNetStudioExcelWeb/NeuralNetStudioExcelWeb.csproj
+++ b/NeuralNetStudioExcelWeb/NeuralNetStudioExcelWeb.csproj
@@ -24,7 +24,8 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <TargetOfficeVersion>15.0</TargetOfficeVersion>
+    <TargetOfficeVersion>
+    </TargetOfficeVersion>
     <TypeScriptToolsVersion>4.2</TypeScriptToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
