--- a/NeuralNetStudioExcelAddin/ClientApp/package.json
+++ b/NeuralNetStudioExcelAddin/ClientApp/package.json
@@ -27,10 +27,10 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@fluentui/react": "^8.19.1",
     "@reduxjs/toolkit": "^1.6.0",
     "core-js": "^3.9.1",
     "es6-promise": "^4.2.8",
-    "office-ui-fabric-react": "^7.10.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-redux": "^7.2.4",
