--- a/NeuralNetStudioExcelAddin/ClientApp/.vscode/tasks.json
+++ b/NeuralNetStudioExcelAddin/ClientApp/.vscode/tasks.json
@@ -30,8 +30,9 @@
     },
     {
       "label": "Debug: Excel Desktop",
-      "type": "npm",
-      "script": "start:desktop -- --app excel",
+      "type": "npm",      
+      "script": "start:demo -- --app excel",
+      // "script": "start:desktop -- --app excel",
       "presentation": {
         "clear": true,
         "panel": "dedicated",
