--- a/NeuralNetStudioExcelAddin/ClientApp/package.json
+++ b/NeuralNetStudioExcelAddin/ClientApp/package.json
@@ -20,6 +20,7 @@
     "lint:fix": "office-addin-lint fix",
     "prettier": "office-addin-lint prettier",
     "start": "office-addin-debugging start manifest.xml",
+    "start:demo": "office-addin-debugging start manifest.xml desktop --no-debug",
     "start:desktop": "office-addin-debugging start manifest.xml desktop",
     "start:web": "office-addin-debugging start manifest.xml web",
     "stop": "office-addin-debugging stop manifest.xml",
